# mitemp-prometheus

./: .gitignore  Cargo.toml  README.md  dbus-bluetooth.xml  flake.nix  module.nix  package.nix
src/: config.rs  main.rs
