[package]
name = "mitemp-prometheus"
version = "0.2.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2018"
description = "Expose Xiaomi MI Temperature and Humidity Sensor to prometheus"
license = "MIT/Apache-2.0"

[dependencies]
dotenv = "0.15.0"
main_error = "0.1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
warp = "0.3"
mitemp = "0.3"
tokio-stream = "0.1"
btleplug = "0.9"
